--- a/Cosas/volums/web/PROYECTO/style.css
+++ b/Cosas/volums/web/PROYECTO/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -29,6 +32,11 @@ nav a:hover {
     background-color: #777;
 }
 
+img{
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
 table {
     border-collapse: collapse;
     width: 100%;
