modified:   "Cosas/volums/web/PROYECTO/JSON_Resultat_Data_Expiraci\303\263.json" 	modified:   Cosas/volums/web/PROYECTO/JSON_Resultat_Eliminar.json 	modified:   Cosas/volums/web/PROYECTO/JSON_Resultat_repetits.json 	modified:   Cosas/volums/web/PROYECTO/funciones.php 	modified:   Cosas/volums/web/PROYECTO/style.css

--- a/Cosas/volums/web/PROYECTO/style.css
+++ b/Cosas/volums/web/PROYECTO/style.css
@@ -29,11 +29,16 @@ nav a:hover {
     background-color: #777;
 }
 
+main {
+    text-align: center;
+}
+
 img{
     display: block;
     margin: 0 auto;
     max-width: 100%;
 }
+
 table {
     border-collapse: collapse;
     width: 100%;
