--- a/Cosas/volums/web/PROYECTO/style.css
+++ b/Cosas/volums/web/PROYECTO/style.css
@@ -1,7 +1,19 @@
+*,*::after,*::before {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.wrapper {
+    width: 90% auto;
+    padding: 2%;
+}
+
 body {
+    max-width: 1000px auto;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
 }
 
 header {
@@ -11,10 +23,15 @@ header {
     padding: 10px;
 }
 
+nav .wrapper {
+    padding: 0;
+}
+
 nav {
     display: flex;
     justify-content: center;
-    background-color: #555;
+    background-color: black;
+    color: white;
 }
 
 nav a {
